Initial referral program (handoff to Nate)

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -57,6 +57,8 @@
 #  referring_campaign_id   :bigint(8)
 #  referring_property_id   :bigint(8)
 #  referring_impression_id :uuid
+#  referral_code           :string
+#  referral_click_count    :integer          default(0)
 #
 
 # IMPORTANT: Limit users fixtures to [1] per [role] using only the minimum required data
